--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -94,8 +94,8 @@ jobs:
     - name: Install rpm package
       run: |
         rm -rf $(ls -1 --ignore=build-tools --ignore=t --ignore=utils)
-        docker exec centos7Instance bash -c "pwd"
-        docker exec centos7Instance bash -c "rpm -iv --prefix=/apisix ./build-tools/outputs/apisix-2.3-0.x86_64.rpm"
+        docker exec centos7Instance bash -c "cd apisix && tree ."
+        docker exec centos7Instance bash -c "cd apisix && rpm -iv --prefix=/apisix ./build-tools/outputs/apisix-2.3-0.x86_64.rpm"
 
     - name: run test cases
       run: |
