--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -89,12 +89,12 @@ jobs:
     - name: install dependencies
       run: |
         docker exec centos7Instance bash -c "cp -r /tmp/apisix ./"
+        docker exec centos7Instance bash -c "cd apisix && rm -rf $(ls -1 --ignore=build-tools --ignore=t --ignore=utils)"
         docker exec centos7Instance bash -c "cd apisix && ./utils/centos7-ci.sh install_dependencies"
 
     - name: Install rpm package
       run: |
-        rm -rf $(ls -1 --ignore=build-tools --ignore=t --ignore=utils)
-        docker exec centos7Instance bash -c "cd apisix/build-tools/output && ls"
+        docker exec centos7Instance bash -c "openresty -V"
         docker exec centos7Instance bash -c "cd apisix && rpm -iv --prefix=/apisix ./build-tools/output/apisix-2.3-0.x86_64.rpm"
 
     - name: run test cases
