--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -88,7 +88,7 @@ jobs:
 
     - name: install dependencies
       run: |
-        docker exec centos7Instance bash -c "mv /tmp/apisix ./"
+        docker exec centos7Instance bash -c "cp -r /tmp/apisix ./"
         docker exec centos7Instance bash -c "cd apisix && rm -rf \$(ls -1 --ignore=build-tools --ignore=t --ignore=utils --ignore=Makefile --ignore=rockspec)"
         docker exec centos7Instance bash -c "cd apisix && ./utils/centos7-ci.sh install_dependencies"
 
