--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -24,15 +24,15 @@ jobs:
           ETCD_ADVERTISE_CLIENT_URLS: http://0.0.0.0:2379
 
     steps:
+    # checkout v2.3 for test v2.3 package for now, need to revert to HEAD
     - name: Check out code
       uses: actions/checkout@v2
       with:
+        ref: v2.3
         submodules: recursive
 
     - name: Build rpm package
       run: |
-        # checkout v2.3 for test v2.3 package for now
-        git checkout v2.3
         sudo gem install --no-document fpm
         # WOULD CHANGE TO MASTER WHEN PR GETS MERGED
         git clone -b new-packaging-for-apisix https://github.com/idbeta/build-tools.git
