--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -32,9 +32,8 @@ jobs:
     - name: Build rpm package
       run: |
         sudo gem install --no-document fpm
-        # WOULD CHANGE TO MASTER WHEN PR GETS MERGED
-        git clone -b new-packaging-for-apisix https://github.com/idbeta/build-tools.git
-        cd build-tools
+        git clone https://github.com/api7/apisix-build-tools.git
+        cd apisix-build-tools
         make package type=rpm app=apisix version=master code_tag=master
 
     - name: Install Redis Cluster
@@ -89,12 +88,12 @@ jobs:
     - name: install dependencies
       run: |
         docker exec centos7Instance bash -c "cp -r /tmp/apisix ./"
-        docker exec centos7Instance bash -c "cd apisix && rm -rf \$(ls -1 --ignore=build-tools --ignore=t --ignore=utils --ignore=Makefile --ignore=rockspec)"
+        docker exec centos7Instance bash -c "cd apisix && rm -rf \$(ls -1 --ignore=apisix-build-tools --ignore=t --ignore=utils --ignore=Makefile --ignore=rockspec)"
         docker exec centos7Instance bash -c "cd apisix && ./utils/centos7-ci.sh install_dependencies"
 
     - name: Install rpm package
       run: |
-        docker exec centos7Instance bash -c "cd apisix && rpm -iv --prefix=/apisix ./build-tools/output/apisix-2.3-0.x86_64.rpm"
+        docker exec centos7Instance bash -c "cd apisix && rpm -iv --prefix=/apisix ./apisix-build-tools/output/apisix-master-0.x86_64.rpm"
         # Dependencies are attached with rpm, so revert `make deps`
         docker exec centos7Instance bash -c "cd apisix && rm -rf deps"
         docker exec centos7Instance bash -c "cd apisix && mv usr/bin . && mv usr/local/apisix/* ."
