test: add fuzzing case about vars

--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -59,6 +59,10 @@ jobs:
       run: |
         python $PWD/t/fuzzing/serverless_route_test.py
 
+    - name: run vars route test
+      run: |
+        python $PWD/t/fuzzing/vars_route_test.py.py
+
     - name: echo test log
       # more than 150k lines, so only display the last log, actually, this step is not needed.
       run: |
