--- a/.github/workflows/chaos.yml
+++ b/.github/workflows/chaos.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Creating minikube cluster
         run: |
           bash ./t/chaos/setup_chaos_utils.sh start_minikube
+          wget https://raw.githubusercontent.com/apache/apisix-docker/master/alpine-local/Dockerfile
+          docker build -t apisix:alpine-local --build-arg APISIX_PATH=. -f Dockerfile alpine
+          minikube cache add apache/apisix:alpine-local -v 7 --alsologtostderr
 
       - name: Print cluster information
         run: |
