--- a/.github/workflows/chaos.yml
+++ b/.github/workflows/chaos.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           bash ./t/chaos/setup_chaos_utils.sh start_minikube
           wget https://raw.githubusercontent.com/apache/apisix-docker/master/alpine-local/Dockerfile
-          docker build -t apisix:alpine-local --build-arg APISIX_PATH=. -f Dockerfile .
+          docker build -t apache/apisix:alpine-local --build-arg APISIX_PATH=. -f Dockerfile .
           minikube cache add apache/apisix:alpine-local -v 7 --alsologtostderr
 
       - name: Print cluster information
