fix build-tools argument name after https://github.com/api7/apisix-build-tools/pull/25
Signed-off-by: yiyiyimu <wosoyoung@gmail.com>

--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -34,7 +34,7 @@ jobs:
         sudo gem install --no-document fpm
         git clone https://github.com/api7/apisix-build-tools.git
         cd apisix-build-tools
-        make package type=rpm app=apisix version=master code_tag=master
+        make package type=rpm app=apisix version=master checkout=master
 
     - name: Install Redis Cluster
       run: |
