--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -1,4 +1,161 @@
 {
   "version": 2.3,
-  "sidebar": {}
+  "sidebar": [
+    {
+      "type": "doc",
+      "id": "README_ES"
+    },
+    {
+      "type": "doc",
+      "id": "architecture-design"
+    },
+    {
+      "type": "doc",
+      "id": "getting-started"
+    },
+    {
+      "type": "doc",
+      "id": "how-to-build"
+    },
+    {
+      "type": "category",
+      "label": "Plugins",
+      "items": [
+        {
+          "type": "category",
+          "label": "General",
+          "items": [
+            "batch-requests",
+            "plugins",
+            "https",
+            "serverless",
+            "redirect"
+          ]
+        },
+        {
+          "type": "category",
+          "label": "Transformation",
+          "items": [
+            "response-rewrite",
+            "proxy-rewrite",
+            "grpc-transcode",
+            "fault-injection"
+          ]
+        },
+        {
+          "type": "category",
+          "label": "Authentication",
+          "items": [
+            "key-auth",
+            "jwt-auth",
+            "basic-auth",
+            "authz-keycloak",
+            "wolf-rbac",
+            "openid-connect"
+          ]
+        },
+        {
+          "type": "category",
+          "label": "Security",
+          "items": [
+            "cors",
+            "uri-blocker",
+            "ip-restriction",
+            "referer-restriction"
+          ]
+        },
+        {
+          "type": "category",
+          "label": "Traffic",
+          "items": [
+            "limit-req",
+            "limit-conn",
+            "limit-count",
+            "proxy-cache",
+            "request-validation",
+            "proxy-mirror",
+            "api-breaker",
+            "traffic-split"
+          ]
+        },
+        {
+          "type": "category",
+          "label": "Monitoring",
+          "items": [
+            "prometheus",
+            "zipkin",
+            "skywalking"
+          ]
+        },
+        {
+          "type": "category",
+          "label": "Loggers",
+          "items": [
+            "http-logger",
+            "tcp-logger",
+            "kafka-logger",
+            "udp-logger",
+            "syslog",
+            "log-rotate"
+          ]
+        }
+      ]
+    },
+    {
+      "type": "doc",
+      "id": "admin-api"
+    },
+    {
+      "type": "doc",
+      "id": "control-api"
+    },
+    {
+      "type": "doc",
+      "id": "health-check"
+    },
+    {
+      "type": "doc",
+      "id": "router-radixtree"
+    },
+    {
+      "type": "doc",
+      "id": "stand-alone"
+    },
+    {
+      "type": "doc",
+      "id": "stream-proxy"
+    },
+    {
+      "type": "doc",
+      "id": "grpc-proxy"
+    },
+    {
+      "type": "doc",
+      "id": "customize-nginx-configuration"
+    },
+    {
+      "type": "doc",
+      "id": "dns"
+    },
+    {
+      "type": "doc",
+      "id": "CHANGELOG"
+    },
+    {
+      "type": "doc",
+      "id": "benchmark"
+    },
+    {
+      "type": "doc",
+      "id": "CODE_STYLE"
+    },
+    {
+      "type": "doc",
+      "id": "debug-function"
+    },
+    {
+      "type": "doc",
+      "id": "FAQ"
+    }
+  ]
 }
