--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -3,7 +3,7 @@
   "sidebar": [
     {
       "type": "doc",
-      "id": "../../../README"
+      "id": "README"
     },
     {
       "type": "doc",
