--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -28,7 +28,7 @@ jobs:
         submodules: recursive
 
     - name: Build rpm package
-      # if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
+      if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
       run: |
         sudo gem install --no-document fpm
         git clone https://github.com/api7/apisix-build-tools.git
@@ -94,7 +94,7 @@ jobs:
         docker exec centos7Instance bash -c "cd apisix && ./utils/centos7-ci.sh install_dependencies"
 
     - name: Install rpm package
-      # if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
+      if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
       run: |
         docker exec centos7Instance bash -c "cd apisix && rpm -iv --prefix=/apisix ./apisix-build-tools/output/apisix-master-0.x86_64.rpm"
         # Dependencies are attached with rpm, so revert `make deps`
@@ -106,7 +106,7 @@ jobs:
         docker exec centos7Instance bash -c "cd apisix && ./utils/centos7-ci.sh run_case"
 
     - name: Publish Artifact
-      # if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
+      if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
       uses: actions/upload-artifact@v2.2.2
       with:
         name: "rpm"
