--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -27,13 +27,21 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Extract branch name
+      if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
+      id: branch_env
+      shell: bash
+      run: |
+        echo "##[set-output name=version;]$(echo ${GITHUB_REF##*/})"
+
     - name: Build rpm package
       if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
       run: |
+        export VERSION=${{ steps.branch_env.outputs.version }}
         sudo gem install --no-document fpm
         git clone https://github.com/api7/apisix-build-tools.git
         cd apisix-build-tools
-        make package type=rpm app=apisix version=master checkout=master
+        make package type=rpm app=apisix version=${VERSION} checkout=release/${VERSION}
         cd ..
         rm -rf $(ls -1 --ignore=apisix-build-tools --ignore=t --ignore=utils --ignore=Makefile --ignore=rockspec)
 
@@ -96,7 +104,7 @@ jobs:
     - name: Install rpm package
       if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
       run: |
-        docker exec centos7Instance bash -c "cd apisix && rpm -iv --prefix=/apisix ./apisix-build-tools/output/apisix-master-0.x86_64.rpm"
+        docker exec centos7Instance bash -c "cd apisix && rpm -iv --prefix=/apisix ./apisix-build-tools/output/apisix-${{ steps.branch_env.outputs.version }}-0.x86_64.rpm"
         # Dependencies are attached with rpm, so revert `make deps`
         docker exec centos7Instance bash -c "cd apisix && rm -rf deps"
         docker exec centos7Instance bash -c "cd apisix && mv usr/bin . && mv usr/local/apisix/* ."
@@ -110,4 +118,4 @@ jobs:
       uses: actions/upload-artifact@v2.2.2
       with:
         name: "rpm"
-        path: "./apisix-build-tools/output/apisix-master-0.x86_64.rpm"
+        path: "./apisix-build-tools/output/apisix-${{ steps.branch_env.outputs.version }}-0.x86_64.rpm"
