docs: fix invalid link

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -142,7 +142,7 @@
     {
       "type": "link",
       "label": "CODE_STYLE",
-      "href": "https://github.com/apache/apisix/blob/master/CODE_STYLE"
+      "href": "https://github.com/apache/apisix/blob/master/CODE_STYLE.md"
     },
     {
       "type": "doc",
