docs: fix invalid link

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -155,7 +155,7 @@
     {
       "type": "link",
       "label": "CHANGELOG",
-      "href": "https://github.com/apache/apisix/blob/master/CHANGELOG"
+      "href": "https://github.com/apache/apisix/blob/master/CHANGELOG.md"
     }
   ]
 }
