ci: ensure the fuzzing is run under Python2
Signed-off-by: spacewander <spacewanderlzx@gmail.com>

--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
   test_apisix:
     name: run fuzzing
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     services:
       etcd:
