add ldap plugin

--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -242,6 +242,7 @@ plugins:                          # plugin list (sorted in alphabetical order)
   - jwt-auth
   - kafka-logger
   - key-auth
+  - ldap-auth
   - limit-conn
   - limit-count
   - limit-req
