--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -101,7 +101,7 @@ jobs:
         cd nacos-docker
         docker-compose -f example/standalone-test.yaml down
         docker-compose -f example/standalone-test.yaml up -d
-        ps aux|grep nacos-gateway-provider-example-2.2.6-SNAPSHOT |grep -v grep|awk '{print $2}'|xargs kill -9
+        sudo kill -9 `ps aux | grep nacos-gateway-provider-example-2.2.6-SNAPSHOT | grep -v grep |awk '{print $2}'`
         nohup java -jar example/nacos-gateway-provider-example-2.2.6-SNAPSHOT.jar --spring.application.name=APISIX-NACOS  > /dev/null 2>&1 &
 
     - name: Install dependencies
