--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -148,7 +148,7 @@
       "items": [
         {
           "type": "category",
-          "label": "discovery",
+          "label": "Discovery",
           "items": [
             "discovery",
             "discovery/dns",
