--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -28,41 +28,49 @@ jobs:
           ETCD_ADVERTISE_CLIENT_URLS: http://0.0.0.0:2379
 
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-      with:
-        submodules: recursive
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
-    - name: run apisix
-      run: |
-        wget -qO - https://openresty.org/package/pubkey.gpg | sudo apt-key add -
-        sudo apt-get update
-        sudo apt-get -y install software-properties-common
-        sudo add-apt-repository -y "deb http://openresty.org/package/ubuntu $(lsb_release -sc) main"
-        sudo apt-get update
-        sudo apt-get install -y git openresty curl openresty-openssl111-dev unzip make gcc
-        ./utils/linux-install-luarocks.sh
+      - name: Cache deps
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-deps
+        with:
+          path: ~/deps
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('rockspec/apisix-master-0.rockspec') }}
 
-        make deps
-        make init
-        make run
+      - name: run apisix
+        run: |
+          wget -qO - https://openresty.org/package/pubkey.gpg | sudo apt-key add -
+          sudo apt-get update
+          sudo apt-get -y install software-properties-common
+          sudo add-apt-repository -y "deb http://openresty.org/package/ubuntu $(lsb_release -sc) main"
+          sudo apt-get update
+          sudo apt-get install -y git openresty curl openresty-openssl111-dev unzip make gcc
+          ./utils/linux-install-luarocks.sh
 
-    - name: run upstream
-      run: |
-        sudo openresty -c $PWD/t/fuzzing/upstream/nginx.conf
+          make deps
+          make init
+          make run
 
-    - name: install boofuzz
-      run: |
-        pip install typing boofuzz
+      - name: run upstream
+        run: |
+          sudo openresty -c $PWD/t/fuzzing/upstream/nginx.conf
 
-    - name: run simpleroute test
-      run: |
-        python $PWD/t/fuzzing/simpleroute_test.py
+      - name: install boofuzz
+        run: |
+          pip install typing boofuzz
 
-    - name: run serverless route test
-      run: |
-        python $PWD/t/fuzzing/serverless_route_test.py
+      - name: run simpleroute test
+        run: |
+          python $PWD/t/fuzzing/simpleroute_test.py
 
-    - name: run vars route test
-      run: |
-        python $PWD/t/fuzzing/vars_route_test.py
+      - name: run serverless route test
+        run: |
+          python $PWD/t/fuzzing/serverless_route_test.py
+
+      - name: run vars route test
+        run: |
+          python $PWD/t/fuzzing/vars_route_test.py
