fix: cache dir path

--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -36,7 +36,7 @@ jobs:
         env:
           cache-name: cache-deps
         with:
-          path: ~/deps
+          path: deps
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('rockspec/apisix-master-0.rockspec') }}
 
       - name: Extract branch name
