--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -38,7 +38,7 @@ jobs:
         env:
           cache-name: cache-deps
         with:
-          path: ~/deps
+          path: deps
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('rockspec/apisix-master-0.rockspec') }}
 
       - name: run apisix
